k8s/live-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-registry-live-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gx-registry-live-server
  template:
    metadata:
      labels:
        app: gx-registry-live-server
    spec:
      containers:
        - env:
            - name: PORT
              value: '3000'
            - name: MONGO_DATABASE
              value: trust-anchor-registry
            - name: MONGO_HOST
              value: mongo
            - name: MONGO_PORT
              value: '27017'
          image: registry.gitlab.com/gaia-x/lab/compliance/gx-registry:main
          name: gx-registry-live-server
          ports:
            - containerPort: 3000
              name: http-api
      runAsNonRoot: true
      runAsUser: 1000
---
kind: Service
apiVersion: v1
metadata:
  name: gx-registry-live-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: gx-registry-live-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gx-registry-live-server
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - registry.gaia-x.eu
      secretName: gx-registry-live-server-tls-secret
  rules:
    - host: registry.gaia-x.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gx-registry-live-server
                port:
                  number: 80
