k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-testnet-statistics-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gx-testnet-statistics-api
  template:
    metadata:
      labels:
        app: gx-testnet-statistics-api
    spec:
      containers:
        - env:
            - name: PORT
              value: '3000'
            - name: MONGO_DATABASE
              value: testnet-statistics
            - name: MONGO_HOST
              value: mongo
            - name: MONGO_PORT
              value: '27017'
            - name: FF_NOTIFY_HEALTH_SLACK
              value: 'true'
            - name: SLACK_WEBHOOK_SECRET_URL
              valueFrom:
                secretKeyRef:
                  name: gx-testnet-statistics-api-secrets
                  key: SLACK_WEBHOOK
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: mongo-creds
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: mongo-creds
          image: deltadao/gaia-x-testnet-statistics-api:main
          imagePullPolicy: Always
          name: gx-testnet-statistics-api
          ports:
            - containerPort: 3000
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: gx-testnet-statistics-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: gx-testnet-statistics-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gx-testnet-statistics-api
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.gx-stats.delta-dao.com
      secretName: gx-testnet-statistics-api-tls-secret
  rules:
    - host: api.gx-stats.delta-dao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gx-testnet-statistics-api
                port:
                  number: 80
